Update Dockerfile to use custom jre